[tool.poetry]
name = "lemonpy"
version = "0.0.3"
description = "A meta package for projects revolving around kinematics configuration solving and self-organization in machine learning"
authors = ["Stefan Ulbrich"]
readme = "README.md"
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License"
]
repository = "https://github.com/StefanUlbrich/lemonpy"

[tool.poetry.dependencies]
python = "^3.10"
design-by-contract = {version = "^0.3.1", optional = true}
lemonpy-mgng = {version = "^0.1.1", optional = true}

[tool.poetry.extras]
dbc = ["design-by-contract"]
mgng = ["lemonpy-mgng"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
